# cluster-generation.graphs

./: .gitignore  CMakeLists.txt  README.md  grafo.cpp  grafo1.csv  grafo2.csv  neg_cicle_graph_gen.py  plot_graph.py  plot_graph_diff.py
informe/: caratula.sty  demoDivisas.tex  desarrolloSegundo.tex  informe.tex  introSegundo.tex  separar.tex
informe/img/: SInvsCon.csv  bf.csv
src/: grafo.cpp  main.cpp
src/include/: grafo.hpp  misc.hpp
tests/divisas/: cicloNoPrincipio.csv  cuatroCicloDoble.csv  cuatroCicloTriple.csv  dosConCiclo.csv  dosSinCiclo.csv  generador.cpp  k3ConCiclo.csv
tests/grafos/: grafo8.csv
